--- a/index.html
+++ b/index.html
@@ -1,14 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>pi PVP spy</title>
-    </head>
-    <body>
-        <p id="total">Total players in PVP:<span></span></p>
-        <p>Per map.</p>
-        <ul id="perMap"></ul>
-        <p>Updated <span id="secsago"></span> seconds ago.</p>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="script.js"></script>
-    </body>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>PiPVPSpy</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+<body>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">PiPVPSpy</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="http://www.warpportal.com/">Warpportal</a></li>
+        <li><a href="http://irowiki.org/wiki/Main_Page">iRo wiki</a></li>
+      </ul>
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="http://www.warpportal.com/">Warpportal</a></li>
+        <li><a href="http://irowiki.org/wiki/Main_Page">iRo wiki</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="header center orange-text">Ragnarok PVP monitor</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">PVP activity for the offical IRO Ragnarok servers</h5>
+      </div>
+      <div class="row center">
+        <a href="http://playragnarok.com/" id="download-button" class="btn-large waves-effect waves-light orange">Get Ragnarok</a>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="section">
+      <div class="row">
+        <div class="col s12 m4">
+            <h2 class="center light-blue-text">Chaos</h2>
+            <h5 class="center" id="totalChaos">Players: <span></span></h5>
+            <p class="light">
+              <ul class="light center" id="perMapChaos">
+                    <li>Prontera [ 0 / 128 ]</li>
+                  <li>Payon [ 0 / 128 ]</li>
+                  <li>Alberta [ 0 / 128 ]</li>
+                  <li>Morroc [ 0 / 128 ]</li>
+                  <li>Izlude [ 0 / 128 ]</li>
+                  <li>Old Payon [ 0 / 128 ]</li>
+              </ul>
+              </p>
+          <p class="light-blue-text center"><small>Updated: <span id="secsagoChaos"></span> (seconds) ago</small></p>
+          </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text">Loki</h2>
+            <h5 class="center" id="totalLoki">Players: <span></span></h5>
+            <p class="light">
+              <ul class="light center" id="perMapLoki">
+                <li>Prontera [ 0 / 128 ]</li>
+                <li>Payon [ 0 / 128 ]</li>
+                <li>Alberta [ 0 / 128 ]</li>
+                <li>Morroc [ 0 / 128 ]</li>
+                <li>Izlude [ 0 / 128 ]</li>
+                <li>Old Payon [ 0 / 128 ]</li>
+              </ul>
+              </p>
+            <p class="light-blue-text center"><small>Updated: <span id="secsagoLoki"></span> (seconds) ago</small></p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text">Thor</h2>
+            <h5 class="center" id="totalThor">Players: <span></span></h5>
+            <p class="light">
+                <ul class="light center" id="perMapThor">
+                    <li>Prontera [ 0 / 128 ]</li>
+                    <li>Payon [ 0 / 128 ]</li>
+                    <li>Alberta [ 0 / 128 ]</li>
+                    <li>Morroc [ 0 / 128 ]</li>
+                    <li>Izlude [ 0 / 128 ]</li>
+                    <li>Old Payon [ 0 / 128 ]</li>
+                </ul>
+            </p>
+            <p class="light-blue-text center"><small>Updated: <span id="secsagoThor"></span> (seconds) ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="section">
+    </div>
+  </div>
+  <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l9 s12">
+          <h5 class="white-text">PiPVPSpy</h5>
+            <p class="grey-text text-lighten-4">Collecting data from Ragnarok Online and pushing it automatically to Github with the use of a RaspberryPi 2. PiPVPSpy is in no way endorsed by or affiliated with Gravity or Warpportal.</p>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Usefull links</h5>
+          <ul>
+            <li><a class="white-text" href="http://www.warpportal.com/">Warpportal</a></li>
+            <li><a class="white-text" href="http://irowiki.org/wiki/Main_Page">iRo wiki</a></li>
+            <li><a class="white-text" href="http://ragial.com/">Ragial</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+          Made by <a class="orange-text text-lighten-3" href="https://github.com/miatribe">Tribe</a> with <a class="orange-text text-lighten-3" href="http://materializecss.com">Materializec</a>, <a class="orange-text text-lighten-3" href="https://github.com/">GitHub</a> and <a class="orange-text text-lighten-3" href="https://www.raspberrypi.org/">RaspberryPi</a>
+      </div>
+    </div>
+  </footer>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.min.js"></script>
+  <script src="js/init.js"></script>
+<script src="script.js"></script>
+  </body>
 </html>
